8159004: jlink attempts to create launcher scripts when root/bin dir does not exist
Reviewed-by: jlaskey, alanb